Update and rename index_2.html to index.html

--- a/index.html
+++ b/index.html
@@ -1190,7 +1190,7 @@
       <div>
         <strong>Contacto</strong>
         <small>
-          hola@monocyclo.mx<br>
+          info@monocyclo.mx<br>
           WhatsApp: +52 443 721 5580<br>
           LinkedIn: /company/monocyclo
         </small>
