--- a/index.html
+++ b/index.html
@@ -968,7 +968,7 @@
         <article class="tile">
           <div class="kicker">Pilar 1</div>
           <h3>Optimiza tu Negocio</h3>
-          <p>Mapeo y mejora de procesos, gestión eficiente de recursos, digitalización, automatización con inteligencia artificial, dashboards e inteligencia de negocios para decisiones informadas.</p>
+          <p>Planes y modelos de negocio, mapeo y mejora de procesos, gestión eficiente de recursos, digitalización, automatización con inteligencia artificial, dashboards e inteligencia de negocios para decisiones informadas.</p>
         </article>
 
         <article class="tile">
@@ -980,7 +980,7 @@
         <article class="tile">
           <div class="kicker">Pilar 3</div>
           <h3>Cuidar para Crecer</h3>
-          <p>Programas de protección civil, prevención de riesgos laborales, higiene ocupacional, normativas de seguridad y construcción de cultura preventiva.</p>
+          <p>Realización de Programa Interno de Protección Civil, gestión para renovación de licencias, prevención de riesgos laborales, higiene ocupacional, normativas de seguridad y construcción de cultura preventiva.</p>
         </article>
       </div>
 
@@ -1064,9 +1064,7 @@
           <h3 style="margin:0 0 16px; font-size:20px; font-weight:600">Qué aceptamos</h3>
           <ul style="margin:0; padding:0 0 0 20px; color:var(--muted); font-size:15px; line-height:1.8">
             <li>Servicios creativos (diseño, fotografía, video)</li>
-            <li>Soporte técnico (web, IT, redes)</li>
             <li>Bienes físicos (café, productos orgánicos)</li>
-            <li>Servicios profesionales (contabilidad, legal)</li>
             <li>Voluntariado y talleres comunitarios</li>
             <li>Espacios físicos (salas, co-working)</li>
           </ul>
