--- a/index.html
+++ b/index.html
@@ -974,7 +974,7 @@
         <article class="tile">
           <div class="kicker">Pilar 2</div>
           <h3>Impacto Regenerativo</h3>
-          <p>Diagnóstico ambiental, economía circular, cultura empresarial regenerativa, diversidad e inclusión, comunicación y marketing sostenible con propósito social.</p>
+          <p>Diagnóstico ambiental, ecología aplicada, economía circular, responsabilidad social, cultura empresarial regenerativa, diversidad e inclusión, y comunicación con propósito que integra sustentabilidad y marketing sostenible.</p>
         </article>
 
         <article class="tile">
