--- a/index.html
+++ b/index.html
@@ -974,7 +974,7 @@
         <article class="tile">
           <div class="kicker">Pilar 2</div>
           <h3>Innovación Regenerativa</h3>
-          <p>Diagnóstico ambiental, ecología aplicada, economía circular, responsabilidad social, cultura empresarial regenerativa, diversidad e inclusión, y comunicación con propósito que integra sustentabilidad y marketing sostenible.</p>
+          <p>Medición de huella ambiental; diagnóstico y planificación de adaptación al cambio climático; soluciones apropiadas con base en ecología aplicada; estructuración de procesos en el marco de economía circular; responsabilidad social, cultura empresarial regenerativa, diversidad e inclusión, y comunicación con propósito.</p>
         </article>
 
         <article class="tile">
