--- a/index.html
+++ b/index.html
@@ -847,7 +847,7 @@
             </div>
             <div class="stat">
               <strong>Innovación regenerativa</strong>
-              <small>Minimización de residuos, optimización de recursos, ecodiseño, equidad de género e inclusión social, para desarrollar empresas resilientes con impacto positivo.</small>
+              <small>Medición de huella ambiental; diagnóstico y planificación de adaptación al cambio climático; soluciones apropiadas con base en ecología aplicada; estructuración de procesos en el marco de economía circular; responsabilidad social, cultura empresarial regenerativa, diversidad e inclusión, y comunicación con propósito.</small>
             </div>
             <div class="stat">
               <strong>Cultura de seguridad</strong>
